--- a/templates/template_var2.html
+++ b/templates/template_var2.html
@@ -186,6 +186,94 @@ tr.table_header {
     font-weight: bold;
 }
 
+<!------------->
+
+* {box-sizing: border-box}
+
+/* Style the tab */
+.tab {
+  float: left;
+  border: 1px solid #ccc;
+  background-color: #f1f1f1;
+  width: 10%;
+  height: 200px;
+}
+
+/* Style the buttons inside the tab */
+.tab button {
+  display: block;
+  background-color: inherit;
+  color: black;
+  padding: 22px 16px;
+  width: 100%;
+  border: none;
+  outline: none;
+  text-align: left;
+  cursor: pointer;
+  transition: 0.3s;
+  font-size: 17px;
+}
+
+/* Change background color of buttons on hover */
+.tab button:hover {
+  background-color: #ddd;
+}
+
+/* Create an active/current "tab button" class */
+.tab button.active {
+  background-color: #ccc;
+}
+
+/* Style the tab content */
+.tabcontent {
+  float: left;
+  padding: 0px 12px;
+  border: 1px solid #ccc;
+  width: 85%;
+  <!-- border-left: none; -->
+  <!-- height: 300px; -->
+  height: 98%;
+}
+
+<!-- /* Style the tab */ -->
+<!-- .tab { -->
+<!--   overflow: hidden; -->
+<!--   border: 1px solid #ccc; -->
+<!--   background-color: #f1f1f1; -->
+<!-- } -->
+
+<!-- /* Style the buttons inside the tab */ -->
+<!-- .tab button { -->
+<!--   background-color: inherit; -->
+<!--   float: left; -->
+<!--   border: none; -->
+<!--   outline: none; -->
+<!--   cursor: pointer; -->
+<!--   padding: 14px 16px; -->
+<!--   transition: 0.3s; -->
+<!--   font-size: 17px; -->
+<!-- } -->
+
+<!-- /* Change background color of buttons on hover */ -->
+<!-- .tab button:hover { -->
+<!--   background-color: #ddd; -->
+<!-- } -->
+
+<!-- /* Create an active/current tablink class */ -->
+<!-- .tab button.active { -->
+<!--   background-color: #ccc; -->
+<!-- } -->
+
+<!-- /* Style the tab content */ -->
+<!-- .tabcontent { -->
+<!--   display: none; -->
+<!--   padding: 6px 12px; -->
+<!--   border: 1px solid #ccc; -->
+<!--   border-top: none; -->
+<!-- } -->
+
+<!------------->
+
 </style>
 
 <script  language="javascript" type="text/javascript">
@@ -201,10 +289,19 @@ function toggle() {
 }
 </script>
 
+
 </head>
     <body bgcolor="#E6E6FA" class=body>
 
-<!-- Variant data. Table generated and inserted by Python script. -->
+<h2>Variant mappings</h2>
+
+<div class="tab">
+  <button class="tablinks" onclick="openCity(event, 'London')" id="defaultOpen">London</button>
+  <button class="tablinks" onclick="openCity(event, 'Paris')">Paris</button>
+</div>
+
+<div id="London" class="tabcontent">
+<!-- <div style="text-align:center"><h2>Mapping</h2></div> -->
 <div id="General" class="big_box"><h1>Variant details</h1>
 <div id="variant" class="general" >General information:<br>
 {{ variant_table }}
@@ -246,27 +343,102 @@ function toggle() {
 
 <!-- List of overlapping regulatory features. Table generated and inserted by Python script. -->
 <div id="General" class="big_box"><h1>GTEx eQTLs</h1>
-<!-- <div id="variant" class="general" >GTEx:<br> -->
 {{ gtex_gene_table }}
-<!-- </div> -->
 </div>
 
 <!-- List of gnes within 1Mbp. Table generated and inserted by Python script. -->
 <div id="General" class="big_box"><h1>Nearby genes</h1>
-<!-- <div id="variant" class="general" >List of genes within 500kbp around the variant:<br> -->
 {{ gene_table }}
-<!-- </div> -->
 </div>
 
 <!-- List of pubmed entries, with links. Table generated and inserted by Python script. -->
 <div id="General" class="big_box"><h1>Pubmed entries</h1>
-<!-- <div id="1000_genomes" class="general" >List of publications where the variant was mentioned:<br> -->
 {{ pubmed_table }}
-<!-- </div> -->
 </div>
 
 <!--The footer will also be generated based on the script version and date-->
 <div class="Footer" > {{ footer }} </div>
 
+</div>
+
+<div id="Paris" class="tabcontent">
+<!-- <div style="text-align:center"><h2>Mapping</h2></div> -->
+<div id="General" class="big_box"><h1>Variant details</h1>
+<div id="variant" class="general" >General information:<br>
+{{ variant_table }}
+</div>
+</div>
+
+<!-- All variants that has phenotype annotations around the variant, default window is used -->
+<div id="General" class="big_box"><h1>Nearby variants associated with phenotypes</h1>
+{{ phenotype_table }}
+</div>
+
+<!-- GWAS hits around our variant. Table generated and inserted by Python script. -->
+<div id="General" class="big_box"><h1>Nearby GWAS signals</h1>
+{{ gwas_table }}
+</div>
+
+<!-- Various consequences dependeing on the overlapping feature. Table generated and inserted by Python script. -->
+<div id="General" class="big_box"><h1>Predicted consequences</h1>
+<div id="variant" class="general" >
+{{ vep_table }}
+</div>
+</div>
+
+<!-- Allele frequencies. Table generated and inserted by Python script. -->
+<div id="General" class="big_box"><h1>1kG allele frequencies</h1>
+{{ population_table }}
+</div>
+
+<div id="General" class="big_box"><h1>ExAC allele frequencies</h1>
+{{ exac_table }}
+</div>
+
+<!-- List of overlapping regulatory features. Table generated and inserted by Python script. -->
+<div id="General" class="big_box"><h1>Regulation</h1>
+{{ regulation_table }}
+</div>
+
+<!-- List of overlapping regulatory features. Table generated and inserted by Python script. -->
+<div id="General" class="big_box"><h1>GTEx eQTLs</h1>
+{{ gtex_gene_table }}
+</div>
+
+<!-- List of gnes within 1Mbp. Table generated and inserted by Python script. -->
+<div id="General" class="big_box"><h1>Nearby genes</h1>
+{{ gene_table }}
+</div>
+
+<!-- List of pubmed entries, with links. Table generated and inserted by Python script. -->
+<div id="General" class="big_box"><h1>Pubmed entries</h1>
+{{ pubmed_table }}
+</div>
+
+<!--The footer will also be generated based on the script version and date-->
+<div class="Footer" > {{ footer }} </div>
+
+</div>
+
 </body>
+
+<script>
+function openCity(evt, cityName) {
+  var i, tabcontent, tablinks;
+  tabcontent = document.getElementsByClassName("tabcontent");
+  for (i = 0; i < tabcontent.length; i++) {
+    tabcontent[i].style.display = "none";
+  }
+  tablinks = document.getElementsByClassName("tablinks");
+  for (i = 0; i < tablinks.length; i++) {
+    tablinks[i].className = tablinks[i].className.replace(" active", "");
+  }
+  document.getElementById(cityName).style.display = "block";
+  evt.currentTarget.className += " active";
+}
+
+document.getElementById("defaultOpen").click();
+</script>
+
+
 </html>
